--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -5,7 +5,7 @@
   --border-color: rgb(128, 128, 128);
   --text-color: rgb(255, 255, 255);
   --selected-color: rgb(29, 161, 242);
-  --hover-color: rgba(29, 161, 242, 0.1);
+  --hover-background: rgba(29, 161, 242, 0.1);
   --hover-color: rgb(26, 145, 218);
 }
 
@@ -19,9 +19,4 @@ body {
   background-color: var(--bg-color);
   color: var(--text-color);
   font-family: sans-serif;
-}
-
-hr {
-  width: 100%;
-  color: var(--border-color);
 }
