--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -7,6 +7,7 @@
   --selected-color: rgb(29, 161, 242);
   --hover-background: rgba(29, 161, 242, 0.1);
   --hover-color: rgb(26, 145, 218);
+  --error-color: rgb(224, 36, 94);
 }
 
 * {
